# agent-ai-foundry-func-wrapper

./: .funcignore  .gitignore  README.md  function_app.py  function_call.rest  function_service.py  host.json  local.settings.sample.json  pyproject.toml  requirements.txt
